# cookiecutter-python

./: cookiecutter.json
{{ cookiecutter.name }}/: Makefile  README.md  pyproject.toml  test_requirements.txt
{{ cookiecutter.name }}/docs/source/: conf.py  index.rst
