[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
]
name = "{{ cookiecutter.name }}"
version = "0.0.1"
authors = [
  { name="Daniel Podwysocki" },
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/danielpodwysocki/{{ cookiecutter.name }}"
repository = "https://github.com/danielpodwysocki/{{ cookiecutter.name }}"

